# BulletServe

./: .gitignore  README.md
csrc/: .gitignore  CMakeLists.txt  Makefile  README.md
csrc/src/: check_cuda.h  libsmctrl.c  libsmctrl.h  libsmctrl_core.c  libsmctrl_validator.cu
csrc/test/: CMakeLists.txt  libsmctrl_test_gemm.cu  libsmctrl_test_gpc_info.c  libsmctrl_test_mask_shared.cu  test_cudagraph.cu  test_mask_tpc.cu  test_validator.cu
examples/runtime/engine/: offline_batch_inference.py
python/: pyproject.toml
python/sglang/: bench_one_batch.py  bench_serving.py  launch_tp_worker.py
python/sglang/srt/: bullet_utils.py  custom_op.py  server_args.py  torch_memory_saver_adapter.py  utils.py
python/sglang/srt/bullet/: auto_inc.py  constants.py  ipc_chat.py  launchers.py  list_mps_proc.py  loop_forever.py  memory_pool_rpc_v2.py  model_monkey_patch.py  observability.py  radix_cache_rpc.py  req_rpc.py  ring_array.py  rpc_server.py  shared_mng.py  shared_nparray.py  sm_controller.py  smem_mutex.py  timing.py
python/sglang/srt/distributed/: communication_op.py  parallel_state.py
python/sglang/srt/entrypoints/: engine.py  http_server.py
python/sglang/srt/entrypoints/openai/: protocol.py  serving_chat.py  serving_completions.py
python/sglang/srt/eplb/: expert_location.py
python/sglang/srt/layers/quantization/: deep_gemm.py
python/sglang/srt/managers/: detokenizer_manager.py  io_struct.py  schedule_batch.py  schedule_policy.py  scheduler.py  scheduler_output_processor_mixin.py  tokenizer_manager.py  tp_worker.py  tp_worker_overlap_thread.py
python/sglang/srt/model_executor/: model_runner.py
python/sglang/srt/models/: llama_timing.py  qwen2_timing.py  qwen3_moe.py
scripts/: kill_mps.sh  start_mps.sh
scripts/misc/: kill_mps.sh  start_mps.sh
